@@ -21,7 +21,6 @@
 		<h1> Johann Sebastian Pong </h1>
 		<p> Play the classic Pong game that you know and love, but redesigned and more awesome. </p>
 		<canvas style="display:block; border:1px solid #000;" width="1280" height="720" id="canvas" onclick="clickEvent()" onmousemove="getMouse()"></canvas>
-		<p> Controls: Use WASD or the arrow keys to control your paddle and press SPACE to serve </p>
 		<p> Description: In a world where music was taken away, fight back with your Pong skills to get the music back!</p>
 		<p> Created by: Bill Derouin, Michael Bandemer, Indran Kamalanathan, Dillon Smith and Fletcher Groseclos</p>
 	</body>
