@@ -12,6 +12,9 @@ JSPong v1.3.1:
 	Fixed collision
 	Added AI
 	Added a checkbox class
+	Fixed the help page
+	Fixed a bug on the 2p menu
+	Added some padding to the buttons
 
 JSPong v1.3:
 	Since this ended up being so big, I changed it to 1.3
